force-app/main/default/objects/Product_Payments__c/Product_Payments__c.object-meta.xml
<CustomObject>
    <label>Product Payment</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>