force-app/main/default/objects/Product_Payments__c/fields/Agency_Calculated_Comm__c.field-meta.xml
<CustomField>
    <fullName>Agency_Calculated_Comm__c</fullName>
    <description>Agency Calculated Commission Amount</description>
    <inlineHelpText>Agency Calculated Commission Amount (provided in excel)</inlineHelpText>
    <label>Agency Calculated Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>