force-app/main/default/objects/Product_Payments__c/fields/Agency_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission_Rate__c</fullName>
    <description>Commission Rate on Agency record at the time of Payment</description>
    <inlineHelpText>Commission Rate on Agency record at the time of Payment</inlineHelpText>
    <label>Agency Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>