force-app/main/default/objects/Product_Payments__c/fields/Agency_Submitted_Payment__c.field-meta.xml
<CustomField>
    <fullName>Agency_Submitted_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placement agency associated with Payment.</description>
    <inlineHelpText>Placement agency associated with Payment.</inlineHelpText>
    <label>Agency Submitted Payment</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Product Payments (Agency Submitted Payment)</relationshipLabel>
    <relationshipName>Product_Payments2</relationshipName>
    <type>Lookup</type>
</CustomField>