force-app/main/default/objects/Product_Payments__c/fields/Agency_Submitted_Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Submitted_Payment_Name__c</fullName>
    <description>Agency Submitted Payment Name</description>
    <formula>Agency_Submitted_Payment__r.Agency_Name__c</formula>
    <inlineHelpText>Agency Submitted Payment Name</inlineHelpText>
    <label>Agency Submitted Payment Name</label>
    <type>Text</type>
</CustomField>