force-app/main/default/objects/Product_Payments__c/fields/Attorney_Fees_After_Payment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fees_After_Payment__c</fullName>
    <label>Attorney Fees After Payment</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>