force-app/main/default/objects/Product_Payments__c/fields/Attorney_Fees_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fees_Before_Payment__c</fullName>
    <description>That contains the product attorney balance before payment updates</description>
    <inlineHelpText>That contains the product attorney balance before payment updates</inlineHelpText>
    <label>Attorney Fees Before Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>