force-app/main/default/objects/Product_Payments__c/fields/Balance_After_Payment__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_Payment__c</fullName>
    <description>Balance After Payment</description>
    <inlineHelpText>Balance After Payment</inlineHelpText>
    <label>Balance After Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>