force-app/main/default/objects/Product_Payments__c/fields/Balance_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>Balance_Before_Payment__c</fullName>
    <description>Balance Before Payment</description>
    <inlineHelpText>Balance Before Payment</inlineHelpText>
    <label>Balance Before Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>