force-app/main/default/objects/Product_Payments__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <formula>CCS_Account__r.Portfolio_Name_Lookup__r.Bank_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Number</label>
    <type>Text</type>
</CustomField>