force-app/main/default/objects/Product_Payments__c/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <description>Billing Entity</description>
    <inlineHelpText>Billing Entity</inlineHelpText>
    <label>Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>C.C.A.</fullName>
            </value>
            <value>
                <fullName>Charness, Charness &amp; Charness LLP</fullName>
            </value>
            <value>
                <fullName>General Credit Services</fullName>
            </value>
            <value>
                <fullName>Kingston Data &amp; Credit</fullName>
            </value>
            <value>
                <fullName>NCRi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>