force-app/main/default/objects/Product_Payments__c/fields/CCS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account_Name__c</fullName>
    <description>CCS Account Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS Account Name</inlineHelpText>
    <label>Account Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>