force-app/main/default/objects/Product_Payments__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <description>Cheque / Payment Reference Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cheque / Payment Reference Number</inlineHelpText>
    <label>Cheque Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>