force-app/main/default/objects/Product_Payments__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>Commission Amount calculated by CFG by Commission rate Priority</description>
    <inlineHelpText>Commission Amount calculated by Salesforce system</inlineHelpText>
    <label>Commission Amount(Not Used)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>