force-app/main/default/objects/Product_Payments__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Commission_Paid</description>
    <inlineHelpText>Commission_Paid</inlineHelpText>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>