force-app/main/default/objects/Product_Payments__c/fields/Commission_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Date__c</fullName>
    <description>Commission Paid Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Commission Paid Date</inlineHelpText>
    <label>Commission Paid Date</label>
    <type>Date</type>
</CustomField>