force-app/main/default/objects/Product_Payments__c/fields/Deposit_Slip__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Slip</label>
    <referenceTo>Deposit_Slip__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>