force-app/main/default/objects/Product_Payments__c/fields/Direct_Payments__c.field-meta.xml
<CustomField>
    <fullName>Direct_Payments__c</fullName>
    <description>This field is used for commission statement functionality.</description>
    <formula>IF( Payment_Source__c == &apos;2&apos; || Payment_Source__c == &apos;3&apos;,Pay_Due__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for commission statement functionality.</inlineHelpText>
    <label>Direct Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>