force-app/main/default/objects/Product_Payments__c/fields/Dividend__c.field-meta.xml
<CustomField>
    <fullName>Dividend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dividend</label>
    <referenceTo>Remittance__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>