force-app/main/default/objects/Product_Payments__c/fields/EFT_Files__c.field-meta.xml
<CustomField>
    <fullName>EFT_Files__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to EFT Record</description>
    <label>EFT Files</label>
    <referenceTo>EFT_Files__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>