force-app/main/default/objects/Product_Payments__c/fields/FairShare_Amount__c.field-meta.xml
<CustomField>
    <fullName>FairShare_Amount__c</fullName>
    <description>FairShare Amount = Gross_Payment_Amount__c * CCS_Account__r.FairShare_Percentage__c</description>
    <inlineHelpText>FairShare Amount = Gross_Payment_Amount__c * FairShare_Percentage__c on CCS Account</inlineHelpText>
    <label>FairShare Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>