force-app/main/default/objects/Product_Payments__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Fee Type</description>
    <inlineHelpText>Fee Type</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assessment Fee</fullName>
            </value>
            <value>
                <fullName>Certificate Of Judgment Fee</fullName>
            </value>
            <value>
                <fullName>Charness Retainer ($400)</fullName>
            </value>
            <value>
                <fullName>CIML Service Fee</fullName>
            </value>
            <value>
                <fullName>Claim Attainment Fee</fullName>
            </value>
            <value>
                <fullName>Costs Awarded To The Defendant</fullName>
            </value>
            <value>
                <fullName>Court Filing Fee</fullName>
            </value>
            <value>
                <fullName>Court Runner Fee</fullName>
            </value>
            <value>
                <fullName>Default Judgment Fee</fullName>
            </value>
            <value>
                <fullName>E-Filing Fee</fullName>
            </value>
            <value>
                <fullName>Filing Garnishment Order</fullName>
            </value>
            <value>
                <fullName>Garnishment Attainment Fee</fullName>
            </value>
            <value>
                <fullName>Motion Fee</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Paralegal/Lawyer Fee</fullName>
            </value>
            <value>
                <fullName>Process Server Fee</fullName>
            </value>
            <value>
                <fullName>Register a Lien</fullName>
            </value>
            <value>
                <fullName>Registered Mail</fullName>
            </value>
            <value>
                <fullName>Search Fee</fullName>
            </value>
            <value>
                <fullName>Sheriff Fee</fullName>
            </value>
            <value>
                <fullName>Trial Fee</fullName>
            </value>
            <value>
                <fullName>Writ Attainment Fee</fullName>
            </value>
            <value>
                <fullName>Writ Renewal Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>