force-app/main/default/objects/Product_Payments__c/fields/Gross_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Payment_Amount__c</fullName>
    <description>Gross Payment Amount = Net Payment + Fairshare Amount</description>
    <formula>Payment_Amount__c + FairShare_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Payment Amount = Net Payment + Fairshare Amount</inlineHelpText>
    <label>Gross Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>