force-app/main/default/objects/Product_Payments__c/fields/Ignore_Warning__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignore Warnings shown when adding payment</description>
    <inlineHelpText>Set to true if need to Ignore Warnings showed on Payment creation</inlineHelpText>
    <label>Ignore Warning</label>
    <type>Checkbox</type>
</CustomField>