force-app/main/default/objects/Product_Payments__c/fields/Interest_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adjustment__c</fullName>
    <description>Interest Adjustment done on Payment when Payment Posting date is lesser than today</description>
    <inlineHelpText>Interest Adjustment done when Payment Posting date is lesser than today</inlineHelpText>
    <label>Interest Adjustment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>