force-app/main/default/objects/Product_Payments__c/fields/Interest_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Amount__c</fullName>
    <description>Interest Payment Amount paid or reversed on Account from Payment Amount</description>
    <inlineHelpText>Interest Payment Amount paid or reversed on Account from Payment Amount</inlineHelpText>
    <label>Interest Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>