force-app/main/default/objects/Product_Payments__c/fields/Is_Payment_Remitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Remitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Payment Remitted</description>
    <inlineHelpText>Is Payment Remitted</inlineHelpText>
    <label>Is Payment Remitted</label>
    <type>Checkbox</type>
</CustomField>