force-app/main/default/objects/Product_Payments__c/fields/Is_Payment_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if reversal payment is added for the corresponding payment</description>
    <inlineHelpText>Set to true if reversal payment is added for the corresponding payment</inlineHelpText>
    <label>Is Payment Reversed</label>
    <type>Checkbox</type>
</CustomField>