force-app/main/default/objects/Product_Payments__c/fields/IsUnArchived__c.field-meta.xml
<CustomField>
    <fullName>IsUnArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnArchived</label>
    <type>Checkbox</type>
</CustomField>