force-app/main/default/objects/Product_Payments__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>Capture last payment amount from product before payment</description>
    <inlineHelpText>Capture last payment amount from product before payment</inlineHelpText>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>