force-app/main/default/objects/Product_Payments__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Capture date from product before payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Capture date from product before payment</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>