force-app/main/default/objects/Product_Payments__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>Populated on Product Legal Entity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Entity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>