force-app/main/default/objects/Product_Payments__c/fields/Legal_Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Legal_Product_Identifier__c</fullName>
    <description>Using for Commission Statement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Product Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>