force-app/main/default/objects/Product_Payments__c/fields/No_of_Days_to_Adjust_Interest__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_to_Adjust_Interest__c</fullName>
    <description>No of Days to Adjust Interest Amount for</description>
    <inlineHelpText>No of Days to Adjust Interest Amount for</inlineHelpText>
    <label>No of Days to Adjust Interest</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>