force-app/main/default/objects/Product_Payments__c/fields/NSF_Fees_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fees_Before_Payment__c</fullName>
    <description>that contains product balances payment updates</description>
    <inlineHelpText>that contains product balances payment updates</inlineHelpText>
    <label>NSF Fees Before Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>