force-app/main/default/objects/Product_Payments__c/fields/Number_Pay_NSF__c.field-meta.xml
<CustomField>
    <fullName>Number_Pay_NSF__c</fullName>
    <formula>VALUE(Pay_NSF__c)</formula>
    <label>Number Pay NSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>