force-app/main/default/objects/Product_Payments__c/fields/Original_Of_Payment_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Original_Of_Payment_Reversal__c</fullName>
    <description>Original Payment Of Payment Reversal - stores ID of original payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Original Payment Of Payment Reversal</inlineHelpText>
    <label>Original Of Payment Reversal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>