force-app/main/default/objects/Product_Payments__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>display product owner</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>