force-app/main/default/objects/Product_Payments__c/fields/Pay_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Pay_Attorney__c</fullName>
    <description>Pay Attorney Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Attorney</label>
    <length>50</length>
    <type>Text</type>
</CustomField>