force-app/main/default/objects/Product_Payments__c/fields/Pay_Court__c.field-meta.xml
<CustomField>
    <fullName>Pay_Court__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Court</label>
    <length>30</length>
    <type>Text</type>
</CustomField>