force-app/main/default/objects/Product_Payments__c/fields/Pay_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Data_Status__c</fullName>
    <description>Pay Data Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pay Data Status  at the time of payment</inlineHelpText>
    <label>Pay Data Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>