force-app/main/default/objects/Product_Payments__c/fields/Pay_Due__c.field-meta.xml
<CustomField>
    <fullName>Pay_Due__c</fullName>
    <label>Commission Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>