force-app/main/default/objects/Product_Payments__c/fields/Pay_Due_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Pay_Due_Bonus__c</fullName>
    <label>Pay Due Bonus</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>