force-app/main/default/objects/Product_Payments__c/fields/Pay_Fee_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Pay_Fee_Recovery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Fee Recovery</label>
    <length>40</length>
    <type>Text</type>
</CustomField>