force-app/main/default/objects/Product_Payments__c/fields/Pay_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pay_Fees__c</fullName>
    <label>Pay Fees</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>