force-app/main/default/objects/Product_Payments__c/fields/Pay_Non_Recoverable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pay_Non_Recoverable_Fee__c</fullName>
    <description>Non-Recoverable Fee Posted, reversed or paid down on Account from Payment Amount</description>
    <inlineHelpText>Non-Recoverable Fee Posted, reversed or paid down on Account from Payment Amount</inlineHelpText>
    <label>Pay Non-Recoverable Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>