force-app/main/default/objects/Product_Payments__c/fields/Pay_NSF__c.field-meta.xml
<CustomField>
    <fullName>Pay_NSF__c</fullName>
    <description>NSF Fee Posted, reversed or paid down on Account from Payment Amount</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>NSF Fee Posted, reversed or paid down on Account from Payment Amount</inlineHelpText>
    <label>Pay NSF</label>
    <length>30</length>
    <type>Text</type>
</CustomField>