force-app/main/default/objects/Product_Payments__c/fields/Pay_Placedetail_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Placedetail_Status__c</fullName>
    <description>Pay Placedetail Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pay Placedetail Status at the time of Payment</inlineHelpText>
    <label>Pay Placedetail Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>