force-app/main/default/objects/Product_Payments__c/fields/Pay_Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Pay_Reimburse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Reimburse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>