force-app/main/default/objects/Product_Payments__c/fields/Pay_Reimburse_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pay_Reimburse_Formula__c</fullName>
    <formula>VALUE(Pay_Reimburse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Reimburse Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>