force-app/main/default/objects/Product_Payments__c/fields/Payment_Agency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Agency__c</fullName>
    <description>Payment Provided Agency Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Provided Agency Number</inlineHelpText>
    <label>Payment Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>