force-app/main/default/objects/Product_Payments__c/fields/Payment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created_Date__c</fullName>
    <description>Payment Created</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Created</inlineHelpText>
    <label>Payment Reporting Date</label>
    <type>Date</type>
</CustomField>