force-app/main/default/objects/Product_Payments__c/fields/Payment_ID_Original__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID_Original__c</fullName>
    <description>This field gets the value from Payment ID (Auto Number) field only on record insert. This is used to retain the first generated Auto Number value even after Unarchival.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment ID Original</label>
    <length>20</length>
    <type>Text</type>
</CustomField>