force-app/main/default/objects/Product_Payments__c/fields/Payment_Posting_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Date_Text__c</fullName>
    <description>Payment Posting Date Text used for payment excel processing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Posting Date Text used for payment excel processing</inlineHelpText>
    <label>Payment Posting Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>